Changelog
=========

1.2 (unreleased)
----------------

- Nothing changed yet.


1.1 (2012-12-21)
----------------

- index is now a view parameter (for example, for expirationDate : @@comingsoon-notify?index=expires)
  [cedricmessiant]

- Update buildout
  [cedricmessiant]


1.0.2 (2011-04-28)
------------------

- Add buildout & bootstrap.
  [toutpt]

- Add dependency of plone.app.registry in default profile and upgrade step.
  [toutpt]

1.0.1 (2011-04-27)
------------------

- Avoid ComponentLookupError with Plone 4.0.
  [thomasdesvenain]

1.0 (2011-04-06)
----------------

- Initial release.
  [thomasdesvenain]