@@ -1,13 +1,20 @@
 <configure
     xmlns="http://namespaces.zope.org/zope"
+    xmlns:grok="http://namespaces.zope.org/grok"
     xmlns:five="http://namespaces.zope.org/five"
     xmlns:i18n="http://namespaces.zope.org/i18n"
     xmlns:browser="http://namespaces.zope.org/browser"
     xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
     i18n_domain="collective.contentrules.comingsoon">
 
+  <include package="five.grok" />
+  <include package="plone.api" />
+
+  <grok:grok package="." />
+
   <include package="Products.CMFCore" />
   <include package="plone.app.registry" />
+  <include package="collective.z3cform.datagridfield" />
 
   <five:registerPackage package="." initialize=".initialize" />
 
